--- a/content/post/20231126.md
+++ b/content/post/20231126.md
@@ -94,7 +94,7 @@ showActions: false
 また、声を担当された五十嵐夕夏(出演時の名義は『五十嵐夕奈』、読み同じ)氏はこの作品の他、同ブランドの別の作品にも出演している。この機会に全て試してみるのはいかが？
 
 ## おまけ
-{{< figure src="/blog/images/20231126/nako-moevalent.png" title="Nako on Moevalent" class="center" width="640" height="360" >}}
+{{< figure src="/blog/images/20231126/nako-moevalent.png" class="center" width="640" height="360" >}}
 
 これは私が疲れた時のUnivalent Linuxのデスクトップ環境。壁紙は奈子。
 
