記事を少し修正

--- a/content/post/20231126-2.md
+++ b/content/post/20231126-2.md
@@ -25,8 +25,7 @@ showActions: false
 [NJB公式サイト https://njb-fm.github.io](https://njb-fm.github.io)
 
 ### 03. サイトの取り扱い品目(コンテンツ)は？(ファンサイトの方は主な取り扱いジャンルもお知らせ下さい)
-前者は日記とかお知らせとか個人的な内容
-後者は同人サークルのサイト
+前者は日記とかお知らせとか個人的な内容、後者は同人サークルのサイト
 
 ### 04. プレイするシューティングゲームは家庭用ゲーム機とアーケード、どちらの割合が多いですか？
 アーケード
