--- a/content/post/20231126.md
+++ b/content/post/20231126.md
@@ -84,7 +84,7 @@ showActions: false
 ## 結論
 <font size=+3>**赤平奈子は癒やしの女神。**</font>
 
-そして赤平奈子は俺の嫁(実はTwitterをやっていた頃、「#24時間以内に240RT来なければ俺の嫁」タグを付けて投稿をしたら見事に0リツイート。
+そして赤平奈子は俺の嫁(実はTwitterをやっていた頃、「#24時間以内に240RT来なければ俺の嫁」タグを付けて投稿をしたら見事に0リツイートを達成した)。
 
 ## 後書き
 今すぐ上のリンクを開き購入せよ。救済は目の前だ！
