本日分3本目と画像配置変更

--- a/content/post/20231126.md
+++ b/content/post/20231126.md
@@ -1,7 +1,7 @@
 ---
 title: '赤平奈子について語る'
 date: 2023-11-26T00:04:24+09:00
-featured_image: /images/20231126/nako-moevalent.png
+featured_image: /images/20231126/thumb.png
 draft: false
 categories:
 - ASMR
@@ -15,6 +15,7 @@ tags:
 - ラブラブ/あまあま
 - RaRo
 - 五十嵐夕夏
+- 加筆修正
 comments: false
 shouMeta: true
 showActions: false
